# rust-boilerplate

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/controller/: mod.rs  system_controller.rs
src/route/: mod.rs
src/service/: app_state.rs  cpu_service.rs  io_service.rs  mod.rs
