[package]
name = "rust-boilerplate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
dotenvy = "0.15"
kafka = "0.10"
mysql_async = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
